--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>My first three.js app</title>
+    <title>WebGL</title>
     <link rel="stylesheet" href="./static/css/webGL.css">
 </head>
 
@@ -11,42 +11,53 @@
     <!-- <canvas id="canvas"></canvas> -->
     <!-- <script src="./static/js/three.js"></script> -->
     <script>
-        var THREE = require('three');
+        var THREE = require('three')
         //create scene
-        var scene = new THREE.Scene();
-        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 0.1, 1000);
+        var renderer = new THREE.WebGLRenderer()
+        renderer.setSize(window.innerWidth, window.innerHeight)
+        document.body.appendChild(renderer.domElement)
 
-        var renderer = new THREE.WebGLRenderer();
-        renderer.setSize(window.innerWidth, window.innerHeight);
-        document.body.appendChild(renderer.domElement);
+        var camera = new THREE.PerspectiveCamera(75, window.innerWidth / window.innerHeight, 1, 1000)
 
-        //create things to display
-        var geometry = new THREE.BoxGeometry(1, 1, 1);
-        // var geometry1
+        var scene = new THREE.Scene()
+
+        var planeGeo = new THREE.PlaneGeometry(60,20)
+        var planeMaterial = new THREE.MeshBasicMaterial({color: 0xcccccc})
+        var plane = new THREE.Mesh(planeGeo, planeMaterial)
+        plane.rotation.x = -0.5*Math.PI
+        // plane.position.x = 15
+
         var material = new THREE.MeshBasicMaterial({
-            color: 0xffffff
-        });
-        var cube = new THREE.Mesh(geometry, material);
-        scene.add(cube);
+            color: 0x0000ff
+        })
+        var material1 = new THREE.MeshBasicMaterial({
+            color : 0x232323
+        })
+        var geometry = new THREE.BoxGeometry(10,10,10)
+        var cube = new THREE.Mesh(geometry,material)
+        var cube1 = new THREE.Mesh(geometry,material1)
+        
+        scene.add(cube)
+        scene.add(cube1)
+        scene.add(plane)
 
-        camera.position.z = 1.5;
+        cube1.position.x = 20
+        cube1.position.y = 10
+        cube1.position.z = -10
 
-        // cube.rotation.x += 0.5;
-        // cube.rotation.y += 0.5;
+        camera.lookAt(cube.position)
 
-        //render scene
-        function render() {
-            requestAnimationFrame(render);
+        scene.fog = new THREE.Fog(0xffffff,0.015,100);
 
-            //make a rotate animation
-            cube.rotation.x += 0.01;
-            cube.rotation.y += 0.01;
-            // cube.rotation.z += 0.1;
-
-            renderer.render(scene, camera);
+        function Render(){
+            requestAnimationFrame( Render )
+            cube1.rotation.x += 0.005
+            cube1.rotation.y += 0.005
+            renderer.render(scene, camera)
         }
-        render();
+        Render()
     </script>
+    <script src="./static/js/simpleControls.js"></script>
 </body>
 
 </html>
